2016-09-12  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:
	# mnist2d: sampling gradcheck
	## need a good gradcheck to make sure, other TODO items in charlm.
	# mnist2d: implement efficient softmax -- seems ok for now.
	# load/save using JLD: need to write KnetArray handlers.
	## turn gpu on by default if exists.
	# eliminate dependence on CUDArt.

	# need an efficient softmax, logsumexp.
	## test on mnist --fast:
	## cpu before: 2.75  gpu before: 2.25
	## cpu after : 2.75  gpu after : 2.10
	## test on lenet --fast:
	## gpu before: 10.15  gpu after: 9.84 (mostly because of relu)
	## after using 10^8 for knetgc limit: 9.30
	## test on charlm with 10k lines of shakespeare (one epoch time) (10,2.419187890389808):
	## compare with 10.6 secs/epoch for train in Knet7:
	## gpu before: test: 2.32 train: 6.58
	## gpu after : test: 2.33 train: 6.30
	## bitarrays : test: 2.15 train: 6.20
	## fixes     : test: 2.16 train: 6.14

	## charlm:
	# loss results do not match Knet7 because of epsbump
	# cpu=gpu tested but knet7=knet8 only forward up to epsbump, knet8 dont have keepstate or gclip

	* TODO8:
	## support multiple gpus with KnetArrays
	# charlm
	## implemented maximum but AutoGrad.ungetindex failing tests
	## experiment with other forms of lstm, profile speed
	# write examples/README
	# try to measure back functions one by one as well for gpu profiling.
	# make BLK,THR dependent on the input size? may improve final sum which is only 10x100 in this example.
	## extend benchmark tests to cover all combinations of 10,100,1000 dimensions.
	# finish cudnn, curand etc. if possible eliminate dependence on them.
	# mnist2d: sparse arrays
	# cpu convolution
	# implement axpy! for KnetArray if it is worth it to get faster updates.

2016-09-10  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:
	# charlm keepstate problem: state has Values so gc does not work unless we getval or reinit state between iterations!
	# charlm loss problem: knet7!=knet8 because of epsbump.
