@@ -6,9 +6,12 @@
 type KnetPtr
     ptr::Ptr{Void}
     len::Int
+    dev::Int
 end
 
-# We use the KnetPtrs type to keep track of allocated pointers:
+# We use the KnetPtrs type to keep track of allocated pointers: We
+# need one per device per size.  KnetFree[i+2] will hold a dictionary
+# from sizes to KnetPtrs for device i.
 
 type KnetPtrs
     used::Int
@@ -21,29 +24,30 @@ end
 # keyed by length in bytes so it can be reused.
 
 if !isdefined(:KnetFree)
-    KnetFree = Dict{Int,KnetPtrs}()
+    KnetFree = [ Dict{Int,KnetPtrs}() for i=1:gpucount()+1 ]
 end
 
 function freeKnetPtr(p::KnetPtr)
-    ptrs = KnetFree[p.len]
+    ptrs = KnetFree[p.dev+2][p.len]
     push!(ptrs.free,p.ptr)
 end
 
 function KnetPtr(nbytes::Integer)
-    ptrs = get!(KnetPtrs,KnetFree,nbytes)
+    dev = gpu()
+    ptrs = get!(KnetPtrs,KnetFree[dev+2],nbytes)
     if !isempty(ptrs.free)
-        kp = KnetPtr(pop!(ptrs.free),nbytes)
+        kp = KnetPtr(pop!(ptrs.free),nbytes,dev)
     elseif gpufree() > 10^8
         ptr = knetMalloc(nbytes)
-        kp = KnetPtr(ptr,nbytes)
+        kp = KnetPtr(ptr,nbytes,dev)
         ptrs.used += 1
     elseif (print("."); gc(); !isempty(ptrs.free))
-        kp = KnetPtr(pop!(ptrs.free),nbytes)
+        kp = KnetPtr(pop!(ptrs.free),nbytes,dev)
     else
         print((:knetgc,nbytes)); gpuinfo()
         knetgc()
         ptr = knetMalloc(nbytes)
-        kp = KnetPtr(ptr,nbytes)
+        kp = KnetPtr(ptr,nbytes,dev)
         ptrs.used += 1
     end
     finalizer(kp, freeKnetPtr)
@@ -51,12 +55,16 @@ function KnetPtr(nbytes::Integer)
 end
 
 # If you really want to clean up memory you need to call knetgc:
+# Note that this only cleans the current device.
 
 function knetgc()
+    dev = gpu()
     gc_enable(false)
-    for v in values(KnetFree)
-        for p in v.free
-            knetFree(p)
+    for v in values(KnetFree[dev+2])
+        if dev >= 0
+            for p in v.free
+                knetFree(p)
+            end
         end
         v.used -= length(v.free)
         empty!(v.free)
@@ -64,15 +72,29 @@ function knetgc()
     gc_enable(true)
 end
 
+function knetMalloc(nbytes::Int)
+    if gpu() >= 0
+        ptr = Ptr{Void}[C_NULL]
+        @cudart(:cudaMalloc,(Ptr{Ptr{Void}},Csize_t),ptr,nbytes)
+        return ptr[1]
+    else
+        convert(Ptr{Void}, pointer(Array(UInt8,nbytes)))
+    end
+end
+
+function knetFree(p::Ptr{Void})
+    # TODO: Do we need the active device be p's device?
+    @cudart(:cudaFree,(Ptr{Void},),p)
+end
+
 if !isdefined(:KnetArray)
 type KnetArray{T,N} # <: AbstractArray{T,N} # TODO: uncomment and deal with ambiguities
     ptr::KnetPtr
     dims::NTuple{N,Int}
-    dev::Int
 end
 end
 
-KnetArray{T,N}(::Type{T}, dims::NTuple{N,Int})=KnetArray{T,N}(KnetPtr(sizeof(T)*prod(dims)), dims, gpu())
+KnetArray{T,N}(::Type{T}, dims::NTuple{N,Int})=KnetArray{T,N}(KnetPtr(sizeof(T)*prod(dims)), dims)
 KnetArray(T::Type, dims::Int...)=KnetArray(T,dims)
 KnetArray(T::Type, d::Integer...) = KnetArray(T,convert(Tuple{Vararg{Int}}, d))
 
@@ -97,7 +119,7 @@ Base.similar{T}(a::KnetArray{T},dims::Int...)=KnetArray(T,dims)
 Base.unsafe_convert{T}(::Type{Ptr{T}}, a::KnetArray) = Base.unsafe_convert(Ptr{T}, pointer(a))
 Base.pointer{T}(a::KnetArray{T})=convert(Ptr{T}, a.ptr.ptr)
 Base.pointer{T}(a::KnetArray{T},i)=convert(Ptr{T}, a.ptr.ptr + (i-1)*sizeof(T))
-Base.reshape{T}(a::KnetArray{T},dims::Dims)=(prod(dims)==length(a)||throw(DimensionMismatch()); KnetArray{T,length(dims)}(a.ptr,dims,a.dev))
+Base.reshape{T}(a::KnetArray{T},dims::Dims)=(prod(dims)==length(a)||throw(DimensionMismatch()); KnetArray{T,length(dims)}(a.ptr,dims))
 
 # AbstractArray interface
 Base.size(a::KnetArray)=a.dims
@@ -116,22 +138,6 @@ Base.eachindex(a::KnetArray) = (1:length(a))
 import AutoGrad: sum_outgrads
 sum_outgrads{T}(a::KnetArray{T},b::KnetArray{T})=(a+b)
 
-function knetMalloc(nbytes::Int)
-    if gpu() >= 0
-        pp = Ptr{Void}[C_NULL]
-        @cudart(:cudaMalloc,(Ptr{Ptr{Void}},Csize_t),pp,nbytes)
-        return pp[1]
-    else
-        convert(Ptr{Void}, pointer(Array(UInt8,nbytes)))
-    end
-end
-
-function knetFree(p::Ptr{Void})
-    if gpu() >= 0
-        @cudart(:cudaFree,(Ptr{Void},),p)
-    end
-end
-
 # Generalizing low level copy using linear indexing to/from gpu arrays:
 # copy!{T}(dest::Array{T}, doffs::Integer, src::Array{T}, soffs::Integer, n::Integer)
 
@@ -143,26 +149,32 @@ function knetcopy!{T}(dest::Kcopy{T}, doffs::Integer, src::Kcopy{T}, soffs::Inte
     if n < 0 || soffs < 1 || doffs < 1 || soffs+n-1 > length(src) || doffs+n-1 > length(dest)
         throw(BoundsError())
     end
-    if gpu() >= 0
+    if (isa(src,KnetArray) && src.ptr.dev >= 0) || (isa(dest,KnetArray) && dest.ptr.dev >= 0)
+        # TODO: does this copy between devices?
         @cudart(:cudaMemcpyAsync,(Ptr{Void},Ptr{Void},Csize_t,UInt32,Ptr{Void}),
                 pointer(dest,doffs), pointer(src,soffs), n*sizeof(T), cudadir(dest, src), stream)
     else
-        # TODO: fix this, support cpu?
-        # Base.unsafe_copy!(pointer(dest,doffs), pointer(src,soffs), n)
-        error("GPU is inactive, please use gpu(true) or gpu(n) to use KnetArray.")
+        Base.warn_once("Using KnetArray on the CPU.")
+        Base.unsafe_copy!(pointer(dest,doffs), pointer(src,soffs), n)
+        # error("GPU is inactive, please use gpu(true) or gpu(n) to use KnetArray.")
     end
     return dest
 end
 
-cudadir(::Array, ::Array) = 0
-cudadir(::KnetArray, ::Array) = 1
-cudadir(::Array, ::KnetArray) = 2
-cudadir(::KnetArray, ::KnetArray) = 3
+function cudadir(a,b)
+    deva = isa(a,KnetArray) && a.ptr.dev >= 0
+    devb = isa(b,KnetArray) && b.ptr.dev >= 0
+    if !deva && !devb; return 0
+    elseif deva && !devb; return 1
+    elseif !deva && devb; return 2
+    elseif deva && devb;  return 3
+    end
+end
 
 # TODO: this will be fixed when we inherint from AbstractArray.
 Base.display(x::KnetArray)=(print("KnetArray ");display(convert(Array,x)))
 
-meminfo()=[(k,v.used,length(v.free)) for (k,v) in KnetFree]
+meminfo()=[(k,v.used,length(v.free)) for (k,v) in KnetFree[gpu()+2]]
 
 # To be able to load/save KnetArrays:
 if isdir(Pkg.dir("JLD"))
